add healthz & change package name
