# docs/swagger.json
@@ -357,6 +357,23 @@
                     }
                 }
             }
+        },
+        "/healthz": {
+            "get": {
+                "description": "Health check for service",
+                "tags": [
+                    "health"
+                ],
+                "summary": "Health Check",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
